force-app/main/default/objects/History_Order__c/History_Order__c.object-meta.xml
<CustomObject>
    <label>History Order</label>
    <nameField>
        <label>History Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>History Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>