force-app/main/default/objects/History_Order__c/fields/Primary_AM__c.field-meta.xml
<CustomField>
    <fullName>Primary_AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary AM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>History_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>