force-app/main/default/objects/History_Order__c/fields/Primary_Customer__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>History Orders</relationshipLabel>
    <relationshipName>History_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>